[TASK-0012] Add routing

--- a/EatingPlanner-GUI/src/app/shared/sidenav/sidenav.component.html
+++ b/EatingPlanner-GUI/src/app/shared/sidenav/sidenav.component.html
@@ -1,21 +1,21 @@
 <mat-nav-list>
-  <mat-list-item role="listitem">
+  <mat-list-item role="listitem" routerLink="/plans" routerLinkActive="active">
     <mat-icon aria-hidden="false">calendar_today</mat-icon>
     <span class="list-text">Plans</span>
   </mat-list-item>
-  <mat-list-item role="listitem">
-    <mat-icon aria-hidden="false">menu_book</mat-icon>
+  <mat-list-item role="listitem" routerLink="/recipes" routerLinkActive="active">
+    <mat-icon aria-hidden="false" routerLink="/plans" routerLinkActive="active">menu_book</mat-icon>
     <span class="list-text">Dish library</span>
   </mat-list-item>
-  <mat-list-item role="listitem">
+  <mat-list-item role="listitem" routerLink="/shopping-list" routerLinkActive="active">
     <mat-icon aria-hidden="false">shopping_basket</mat-icon>
     <span class="list-text">Shopping list</span>
   </mat-list-item>
-  <mat-list-item role="listitem">
+  <mat-list-item role="listitem" routerLink="/statistics" routerLinkActive="active">
     <mat-icon aria-hidden="false">bar_chart</mat-icon>
     <span class="list-text">Statistics</span>
   </mat-list-item>
-  <mat-list-item role="listitem">
+  <mat-list-item role="listitem" routerLink="/products" routerLinkActive="active">
     <mat-icon aria-hidden="false">bakery_dining</mat-icon>
     <span class="list-text">Products library</span>
   </mat-list-item>
