--- a/EatingPlanner-GUI/src/app/main-view/main-view.component.html
+++ b/EatingPlanner-GUI/src/app/main-view/main-view.component.html
@@ -4,6 +4,8 @@
     <mat-sidenav #sidenav mode="side" opened>
       <eatp-sidenav></eatp-sidenav>
     </mat-sidenav>
-    <mat-sidenav-content>Main</mat-sidenav-content>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
