--- a/EatingPlanner-GUI/src/app/features/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/EatingPlanner-GUI/src/app/features/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,11 +1,9 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <!-- <div mat-card-avatar class="example-header-image"></div> -->
-    <mat-card-title>{{recipe.name}}</mat-card-title>
-    <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+    <img [attr.src]="recipe.image" *ngIf="recipe.image" style="max-width: 100%; max-height: 100%; border-top-left-radius: 4px; border-top-right-radius: 4px;">
   </mat-card-header>
-  <img *ngIf="recipe.recipeImageResponse.url" mat-card-image [src]="recipe.recipeImageResponse.url" alt="Meal photo">
   <mat-card-content>
+    <mat-card-title>{{recipe.name}}</mat-card-title>
     <p>
       {{recipe.description}}
     </p>
