--- a/EatingPlanner-GUI/src/app/features/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/EatingPlanner-GUI/src/app/features/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <img [attr.src]="recipe.image" *ngIf="recipe.image" style="max-width: 100%; max-height: 100%; border-top-left-radius: 4px; border-top-right-radius: 4px;">
+    <img class="recipe-image" [attr.src]="recipe.image" *ngIf="recipe.image">
   </mat-card-header>
   <mat-card-content>
     <mat-card-title>{{recipe.name}}</mat-card-title>
@@ -8,8 +8,4 @@
       {{recipe.description}}
     </p>
   </mat-card-content>
-  <!-- <mat-card-actions>
-    <button mat-button>TEMP</button>
-    <button mat-button>TEMP2</button>
-  </mat-card-actions> -->
 </mat-card>
