--- a/EatingPlanner-GUI/src/app/features/add-recipe/add-recipe.component.scss
+++ b/EatingPlanner-GUI/src/app/features/add-recipe/add-recipe.component.scss
@@ -1,6 +1,18 @@
 .recipe-form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 10px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 10px;
+}
+
+.mat-card {
+  width: 50%;
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
